@@ -60,6 +60,9 @@ int loopback_init (hashcat_ctx_t *hashcat_ctx)
 
   loopback_ctx->enabled = false;
 
+  if (user_options->usage          > 0)    return 0;
+  if (user_options->backend_info   > 0)    return 0;
+
   if (user_options->benchmark     == true) return 0;
   if (user_options->hash_info     == true) return 0;
   if (user_options->keyspace      == true) return 0;
@@ -68,10 +71,8 @@ int loopback_init (hashcat_ctx_t *hashcat_ctx)
   if (user_options->stdout_flag   == true) return 0;
   if (user_options->speed_only    == true) return 0;
   if (user_options->progress_only == true) return 0;
-  if (user_options->usage         == true) return 0;
   if (user_options->version       == true) return 0;
   if (user_options->identify      == true) return 0;
-  if (user_options->backend_info   > 0)    return 0;
 
   loopback_ctx->enabled  = true;
   loopback_ctx->fp.pfp   = NULL;
