@@ -1401,12 +1401,13 @@ int mask_ctx_init (hashcat_ctx_t *hashcat_ctx)
 
   mask_ctx->enabled = false;
 
+  if (user_options->usage         > 0)    return 0;
+  if (user_options->backend_info  > 0)    return 0;
+
   if (user_options->hash_info    == true) return 0;
   if (user_options->left         == true) return 0;
   if (user_options->show         == true) return 0;
-  if (user_options->usage        == true) return 0;
   if (user_options->version      == true) return 0;
-  if (user_options->backend_info  > 0)    return 0;
 
   if (user_options->attack_mode  == ATTACK_MODE_ASSOCIATION) return 0;
   if (user_options->attack_mode  == ATTACK_MODE_STRAIGHT)    return 0;
